--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,18 @@ tokio = { version = "1", features = ["full"] }
 reqwest = { version = "0.11", features = ["blocking"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-diesel = "2.0.3"
 dotenv = "0.15.0"
+diesel = { version = "2.0.3", features = ["sqlite", "r2d2", "chrono"] }
+diesel_migrations = "1.4"
+surf = "2.3"
+juniper = "0.15.11"
+warp = "0.3.3"
+actix-files = "0.6.2"
+bcrypt = "0.10"
+env_logger = "0.10.0"
+log = "0.4.17"
+actix-rt = "2.8.0"
+chrono = { version = "0.4.24", features = ["serde"] }
 
 [dev-dependencies]
 graphql_client = "0.12.0"
