--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "Goalie"
+name = "goalie"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,7 +9,7 @@ edition = "2021"
 actix-web = "4.0.0-beta.8"
 async-graphql = "3.0.14"
 async-graphql-actix-web = "3.0.14"
-sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls"] }
+# sqlx = { version = "0.5", features = ["sqlite", "runtime-tokio-rustls"] }
 tokio = { version = "1", features = ["full"] }
 reqwest = { version = "0.11", features = ["blocking"] }
 serde = { version = "1.0", features = ["derive"] }
@@ -26,6 +26,9 @@ env_logger = "0.10.0"
 log = "0.4.17"
 actix-rt = "2.8.0"
 chrono = { version = "0.4.24", features = ["serde"] }
+r2d2_sqlite = "0.21.0"
+r2d2 = "0.8.10"
+rusqlite = "0.28.0"
 
 [dev-dependencies]
 graphql_client = "0.12.0"
